# jarvis-lib

./: .dockerignore  .estafette.yaml  Cargo.toml  Dockerfile  dlc.sh  prototool.yaml  test-config.yaml  test-measurement.yaml
.github/workflows/: build.yml
jarvis/models/v1/: entity_type.proto  measurement.proto  metric_type.proto  sample.proto  sample_type.proto
proto/: prototool.yaml
proto/jarvis/models/v1/: entity_type.proto  measurement.proto  metric_type.proto  sample.proto  sample_type.proto
proto/rustproto/: rustproto.proto
src/: bigquery_client.rs  config_client.rs  exporter_service.rs  lib.rs  measurement_client.rs  model.rs  model_test.rs  nats_client.rs  planner_client.rs  planner_service.rs  spot_prices_state_client.rs  state_client.rs
src/model/: entity_type.rs  measurement.rs  metric_type.rs  mod.rs  sample.rs  sample_type.rs  spot_price.rs  spot_price_planner.rs  spot_prices_state.rs
tests/: test-measurement.json  test-measurement.yaml
