[package]
name = "jarvis-lib"
version = "0.1.0"
authors = ["Jorrit Salverda <jorrit.salverda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
kube = { version = "0.82", default-features = false, features = ["client", "runtime", "derive", "rustls-tls"] }
nats = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
uuid = { version = "1.3", features = ["v4"] }

[dev-dependencies]
pretty_assertions = "1.3"
async-std = "1.12.0"
